src/tests/test-src/errors/E20-unexpected-token.syntran
// E20: unexpected-token
// The parser encountered a token it didn't expect at this position

let a = 1;

let b = ;
